--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,3 +14,17 @@ services:
     command: bash "scripts/run_tests.sh"
     volumes:
       - .:/usr/src
+
+  s390:
+    image: s390x_debian
+    build: 
+      context: .
+      dockerfile: dockerfiles/s390.Dockerfile
+    volumes:
+      - .:/usr/src
+
+  s390_test:
+    image: s390x_debian
+    command: bash "scripts/run_tests.sh"
+    volumes:
+      - .:/usr/src
