--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,3 +40,15 @@ services:
     command: bash "scripts/run_tests.sh"
     volumes:
       - .:/usr/src
+
+  debian:
+    image: bee2:debian
+    build: 
+      context: .
+      dockerfile: dockerfiles/rawhide.Dockerfile
+      x-bake:
+        platforms:
+          - linux/amd64
+          - linux/s390x
+    volumes:
+      - .:/usr/src  
