Remove unsupported features for docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,10 +6,6 @@ services:
     build: 
       context: .
       dockerfile: dockerfiles/rawhide.Dockerfile
-      x-bake:
-        platforms:
-          - linux/amd64
-          - linux/s390x
     volumes:
       - .:/usr/src
 
@@ -37,6 +33,12 @@ services:
 
   s390_test:
     image: s390x_debian
+    command: bash "scripts/run_tests.sh"
+    volumes:
+      - .:/usr/src
+
+  fedora_test:
+    image: bee2:fedora
     command: bash "scripts/run_tests.sh"
     volumes:
       - .:/usr/src
