--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -12,6 +12,9 @@ jobs:
   build:
     name: Build and test
     runs-on: windows-latest
+    defaults:
+      run:
+        shell: bash
     strategy:
       matrix:
         include:
@@ -21,10 +24,9 @@ jobs:
     steps:
     - name: Get source
       uses: actions/checkout@v3
-    - name: Set up MinGW
-      uses: egor-tensin/setup-mingw@v2
-      with:
-        platform: x64
+    - name: Check MinGW version
+      run: |
+        gcc --version
     - name: Get CMake
       uses: symbitic/install-cmake@master
     - name: Configure CMake
