--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -12,9 +12,6 @@ jobs:
   build:
     name: Build and test
     runs-on: windows-latest
-    defaults:
-      run:
-        shell: bash
     strategy:
       matrix:
         include:
@@ -24,6 +21,9 @@ jobs:
     steps:
     - name: Get source
       uses: actions/checkout@v3
+    - name: Add path to MinGW
+      run: |
+        $env:PATH = "C:\msys64\usr\bin;$env:PATH"
     - name: Check MinGW version
       run: |
         gcc --version
